@@ -12,6 +12,9 @@
    - djm@cvs.openbsd.org 2004/06/13 15:04:08
      [Makefile test-exec.sh]
      regress test for client multiplexing; ok markus@
+   - djm@cvs.openbsd.org 2004/06/13 15:16:54
+     [regress/test-exec.sh]
+     remove duplicate setting of $SCP; spotted by markus@
 
 20040615
  - (djm) OpenBSD CVS Sync
@@ -1237,4 +1240,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3391 2004/06/16 10:22:22 dtucker Exp $
+$Id: ChangeLog,v 1.3392 2004/06/16 10:31:18 dtucker Exp $
